src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__oid__cast_oid_to_int64__impl.snap
---
source: src/expr/src/scalar/func/impls/oid.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: Int64,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: Int64,
        nullable: false,
    },
    preserves_uniqueness: true,
    inverse: Some(
        CastInt64ToOid(
            CastInt64ToOid,
        ),
    ),
    is_monotone: false,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
